--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'D501'
 - !lcsh 'World War, 1914-1918 -- Campaigns -- Palestine'
+- GITenberg
 title: With Our Army in Palestine
 url: http://www.gutenberg.org/ebooks/19941
